# cppgame

./: .gitignore  CMakeLists.txt  README.md  cmds.txt
include/: Entity.hpp  RenderWindow.hpp
src/: Entity.cpp  RenderWindow.cpp  main.cpp
